@@ -201,7 +201,7 @@
                 <artifactId>appassembler-maven-plugin</artifactId>
                 <version>2.0.0</version>
                 <configuration>
-                    <assembleDirectory>${project.build.directory}/server</assembleDirectory>
+                    <assembleDirectory>${project.build.directory}/generated-resources/appassembler/jsw/server</assembleDirectory>
                     <repositoryName>lib</repositoryName>
                     <binFolder>bin</binFolder>
                     <configurationDirectory>conf</configurationDirectory>
@@ -247,22 +247,28 @@
                                 </generatorConfiguration>
                             </generatorConfigurations>
                             <jvmSettings>
-                                <!-- jvm参数 -->
-                                <extraArguments>
-                                    <extraArgument>-server</extraArgument>
-                                    <extraArgument>-Xmx2G</extraArgument>
-                                    <extraArgument>-Xms1G</extraArgument>
-                                </extraArguments>
                                 <systemProperties>
-                                    <systemProperty>com.sun.management.jmxremote</systemProperty>
-                                    <systemProperty>com.sun.management.jmxremote.port=8079</systemProperty>
-                                    <systemProperty>com.sun.management.jmxremote.authenticate=false</systemProperty>
-                                    <systemProperty>com.sun.management.jmxremote.ssl=false</systemProperty>
+                                    <systemProperty>appserver.home=.</systemProperty>
+                                    <systemProperty>appserver.base=%BASEDIR%</systemProperty>
+                                    <systemProperty>java.io.tmpdir=%BASEDIR%/temp</systemProperty>
                                 </systemProperties>
+                                <extraArguments>
+                                    <extraArgument>-XX:MaxPermSize=256m</extraArgument>
+                                </extraArguments>
+                                <initialMemorySize>512</initialMemorySize>
+                                <maxMemorySize>1024</maxMemorySize>
                             </jvmSettings>
                         </daemon>
                     </daemons>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate-daemons</goal>
+                            <goal>create-repository</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
